# tspec

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  t1.ts.toml  tspec.dyn-opt.ts.toml  tspec.musl.ts.toml  tspec.other.ts.toml  tspec.release.ts.toml  tspec.static-opt.ts.toml  tspec.ts.toml  x86_64-unknown-linux-tspec.json
.claude/: 04a21918-a429-4e1e-93b1-ca0cea51c8c8.jsonl  08d6af52-0da8-4794-8440-7ff91b7fc4a1.jsonl  0952d71d-56aa-45c4-b7f4-87246c89e705.jsonl  0ea6eaaa-bc67-454c-966b-a143f5222609.jsonl  1c5b040a-0785-4801-9c5a-cab6dbf8be5e.jsonl  21b398d3-9f07-4121-a4a7-1582fcfb61b8.jsonl  2328e3da-edd7-41e7-b3d2-c68c76e55751.jsonl  263622dc-a034-4871-96f9-76fda70d8bd6.jsonl  294539fa-a24e-40ed-bb24-107dd02b7bc9.jsonl  31844e9d-db10-4dee-9989-db9a3cc2434b.jsonl  3b0493f7-4d90-404a-a9fc-982bb9699901.jsonl  43d16912-db8e-45bb-9df2-845f8d686eef.jsonl  46b5458d-7547-4946-8dad-38c6bdd85312.jsonl  4b7b0982-40a3-41ed-88fa-66bab771017e.jsonl  523e0196-ec0e-4f0f-b3aa-d2ec37f02b00.jsonl  5393dae0-bcf8-4710-befe-e652ae5de49f.jsonl  59c30adf-4972-43d1-8ae5-b7ef0ec46ce1.jsonl  5e66f4b9-c834-440c-98fb-45a949d6d922.jsonl  5fdb0e06-516a-41d4-a0f7-6fda0b96546f.jsonl  68f3676e-6bda-4e17-9573-54913c83dca5.jsonl  6a2fae4d-e5f3-4e31-9bad-0cabab5b1e70.jsonl  6b337234-8e56-4f9b-bbe0-f9bc945a2878.jsonl  6c2f83de-7271-4743-8fb2-87e59b0e6335.jsonl  71031bbb-35d9-4941-aa71-deb65463c82f.jsonl  72b72004-8d1a-40a3-91ca-8dc1d1f9160d.jsonl  75bc7f40-abd6-4a8f-a3ff-a5433f5561a7.jsonl  785f4d80-3220-44cd-932e-1df50314ab70.jsonl  7bc8af93-0225-46e5-adb6-8ab5eb7edf00.jsonl  (+28 more)
(+333 files in other folders)
