[package]
name = "tspec"
version = "0.9.2"
edition = "2024"
description = "Translation spec based build system"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
cargo_metadata = "0.19"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
