[workspace]
members = ["tspec-build"]

[package]
name = "tspec"
version = "0.11.6-dev1"
edition = "2024"
description = "Translation spec based build system"
authors = ["Wink Saville <wink@saville.com>, Claude Opus 4.6 <noreply@anthropic.com>"]
license = "MIT, Apache-2.0"
repository = "https://github.com/wink/tspec"
exclude = [".claude/", "notes/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
cargo_metadata = "0.19"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
